--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ webpack_config = "node_modules/flareact/webpack"
 compatibility_date = "2022-07-01"
 
 [triggers]
-crons = ["30 * * * *"]
+crons = ["0/30 * * * *"]
 
 [site]
 bucket = "out"
